examples/test/testpolicy10274.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10274
  namespace: namespace362
spec:
  podSelector:
    matchLabels:
      key46: value25
      key19: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value26
          key33: value39
          key26: value34
      podSelector:
        matchLabels:
          key45: value31
          key1: value42
